--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -5,22 +5,16 @@
     <title>Posts</title>
 </head>
 <body>
-    <h1>게시글</h1>
+    <h1 th:text="${board.getTitle()}"></h1>
+
     <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>제목</th>
-                <th>내용</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="article : ${articles}">
-                <td th:text="${article.id}">ID</td>
-                <td th:text="${article.title}">제목</td>
-                <td th:text="${article.content}">내용</td>
-            </tr>
-        </tbody>
+        
+        <tr th:each="article : ${articles}">
+            <td th:text="${article.getTitle()}"></td>
+            <td th:text="${article.getAuthor()}"></td>
+            <td th:text="${article.getDate()}"></td>
+            <td th:text="${article.getContent()}"></td>
+        </tr>
     </table>
 </body>
 </html>
