feat: posts html 수정

--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -7,14 +7,13 @@
 <body>
     <h1 th:text="${board.getTitle()}"></h1>
 
-    <table>
-        
-        <tr th:each="article : ${articles}">
-            <td th:text="${article.getTitle()}"></td>
-            <td th:text="${article.getAuthor()}"></td>
-            <td th:text="${article.getDate()}"></td>
-            <td th:text="${article.getContent()}"></td>
-        </tr>
-    </table>
+    <div th:each="article : ${articles}">
+        <h2 th:text="${article.getTitle()}"></h2>
+        <p>
+            작성자: <span th:text="${article.getAuthor()}"></span> |
+            작성일: <span th:text="${article.getDate().format('yyyy-MM-dd HH:mm')}"></span>
+        </p>
+        <div th:text="${article.getContent()}"></div>
+    </div>
 </body>
 </html>
