--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Posts</title>
+    <title>Board Posts</title>
 </head>
 <body>
-    <h1 th:text="${board.getTitle()}"></h1>
-
-    <div th:each="article : ${articles}">
-        <h2 th:text="${article.getTitle()}"></h2>
-        <p>
-            작성자: <span th:text="${article.getAuthor()}"></span> |
-            작성일: <span th:text="${article.getDate().format('yyyy-MM-dd HH:mm')}"></span>
-        </p>
-        <div th:text="${article.getContent()}"></div>
-    </div>
+    <h1 th:text="'Board: ' + ${board.title}"></h1>
+    <ul th:each="article : ${articles}">
+        <li>
+            <a th:href="@{/articles/{id}(id=${article.id})}" th:text="${article.title}"></a>
+        </li>
+    </ul>
 </body>
 </html>
